--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@legendapp/list": "^1.0.0-beta.24",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.78.1",
